Updated build.properties file with two new properties

--- a/src/data/php-docbook/build.properties
+++ b/src/data/php-docbook/build.properties
@@ -7,4 +7,7 @@ docbook.longName=<your project's long name here>
 docbook.editions=1.0-en
 
 component.type=php-docbook
-component.version=1
+component.version=2
+
+tools.docbook=docbook-xsl-1.76.1
+tools.fop=fop-1.0
