--- a/src/data/php-docbook/build.properties
+++ b/src/data/php-docbook/build.properties
@@ -1,4 +1,5 @@
 project.name=<your project name>
+project.hostname=<hostname of your project's website>
 project.majorVersion=X
 project.minorVersion=Y
 project.patchLevel=Z
@@ -11,3 +12,5 @@ component.version=2
 
 tools.docbook=docbook-xsl-1.76.1
 tools.fop=fop-1.0
+
+www.local=/var/www/${project.hostname}
