Removed apostrophe that caused parsing error in build.properties file

--- a/src/data/php-docbook/build.properties
+++ b/src/data/php-docbook/build.properties
@@ -4,7 +4,7 @@ project.majorVersion=X
 project.minorVersion=Y
 project.patchLevel=Z
 
-docbook.longName=<your project's long name here>
+docbook.longName=<your project long name here>
 docbook.editions=1.0-en
 
 component.type=php-docbook
